overflow fix

--- a/src/components/Dashboard/Home/TransactionListHeader/TransactionListHeader.module.css
+++ b/src/components/Dashboard/Home/TransactionListHeader/TransactionListHeader.module.css
@@ -34,7 +34,7 @@
 }
 
 .categoryBox {
-  width: 16.66%;
+  width: 20%;
   display: flex;
   align-items: center;
   justify-content: start;
